--- a/.github/workflows/dev_atlas-homes-api-dev.yml
+++ b/.github/workflows/dev_atlas-homes-api-dev.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - atlas-homes-api-dev
+name: Build and Deploy to Dev
 
 on:
   push:
@@ -33,7 +33,8 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+        # Self-contained win-x64 to match prod; avoids 500.31 on Windows App Service.
+        run: dotnet publish ./Atlas.Api/Atlas.Api.csproj -c Release -o "${{env.DOTNET_ROOT}}/myapp" -r win-x64 --self-contained true
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
