--- a/.github/workflows/dev_atlas-homes-api-dev.yml
+++ b/.github/workflows/dev_atlas-homes-api-dev.yml
@@ -33,8 +33,8 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        # Self-contained win-x64 to match prod; avoids 500.31 on Windows App Service.
-        run: dotnet publish ./Atlas.Api/Atlas.Api.csproj -c Release -o "${{env.DOTNET_ROOT}}/myapp" -r win-x64 --self-contained true
+        # Self-contained win-x86 for Windows App Service deployment package.
+        run: dotnet publish ./Atlas.Api/Atlas.Api.csproj -c Release -o "${{env.DOTNET_ROOT}}/myapp" -r win-x86 --self-contained true
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -134,6 +134,24 @@ jobs:
         run: |
           Get-ChildItem -Force
           Get-ChildItem ./net-app -Force
+
+      - name: Verify published artifacts
+        shell: pwsh
+        run: |
+          $requiredFiles = @(
+            'Atlas.Api.dll'
+            'Atlas.Api.deps.json'
+            'Atlas.Api.runtimeconfig.json'
+            'web.config'
+          )
+
+          $missingFiles = $requiredFiles | Where-Object { -not (Test-Path (Join-Path './net-app' $_)) }
+          if ($missingFiles.Count -gt 0) {
+            Write-Error ("Missing required publish artifacts: {0}" -f ($missingFiles -join ', '))
+            exit 1
+          }
+
+          Write-Host 'All required publish artifacts are present.'
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
