--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -174,6 +174,37 @@ jobs:
           tenant-id: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'dev' && secrets.AZURE_TENANT_ID_DEV || secrets.AZURE_TENANT_ID_PROD }}
           subscription-id: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'dev' && secrets.AZURE_SUBSCRIPTION_ID_DEV || secrets.AZURE_SUBSCRIPTION_ID_PROD }}
 
+      - name: Validate deployment package files
+        if: github.event_name != 'push' || github.ref != 'refs/heads/main' || vars.DEPLOY_PROD_ON_MAIN == 'true'
+        shell: pwsh
+        run: |
+          $deployDir = './publish'
+          $requiredFiles = @(
+            'Atlas.Api.dll'
+            'Atlas.Api.deps.json'
+            'Atlas.Api.runtimeconfig.json'
+            'web.config'
+          )
+
+          $missingFiles = @()
+          foreach ($file in $requiredFiles) {
+            $path = Join-Path $deployDir $file
+            if (-not (Test-Path -Path $path -PathType Leaf)) {
+              $missingFiles += $file
+            }
+          }
+
+          if ($missingFiles.Count -gt 0) {
+            Write-Error "Missing required deployment files in $deployDir: $($missingFiles -join ', ')"
+            Write-Host 'Repository root listing:'
+            Get-ChildItem -Force
+            Write-Host "Contents of $deployDir:"
+            Get-ChildItem $deployDir -Force
+            exit 1
+          }
+
+          Write-Host 'All required deployment files are present.'
+
       - name: Deploy to Azure Web App
         if: github.event_name != 'push' || github.ref != 'refs/heads/main' || vars.DEPLOY_PROD_ON_MAIN == 'true'
         uses: azure/webapps-deploy@v3
