Fix 32-bit App Service startup for self-contained publish

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -180,6 +180,7 @@ jobs:
         run: |
           $deployDir = './publish'
           $requiredFiles = @(
+            'Atlas.Api.exe'
             'Atlas.Api.dll'
             'Atlas.Api.deps.json'
             'Atlas.Api.runtimeconfig.json'
