--- a/.github/workflows/dev_atlas-homes-api-dev.yml
+++ b/.github/workflows/dev_atlas-homes-api-dev.yml
@@ -134,6 +134,7 @@ jobs:
         run: |
           $deployDir = './net-app'
           $requiredFiles = @(
+            'Atlas.Api.exe'
             'Atlas.Api.dll'
             'Atlas.Api.deps.json'
             'Atlas.Api.runtimeconfig.json'
