--- a/Atlas.Api/web.config
+++ b/Atlas.Api/web.config
@@ -5,8 +5,8 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="dotnet"
-                  arguments=".\\Atlas.Api.dll"
+      <aspNetCore processPath=".\\Atlas.Api.exe"
+                  arguments=""
                   stdoutLogEnabled="false"
                   stdoutLogFile="\\?\%home%\\LogFiles\\stdout"
                   hostingModel="inprocess">
