--- a/Atlas.Api/web.Release.config
+++ b/Atlas.Api/web.Release.config
@@ -3,9 +3,9 @@
   <location path="." inheritInChildApplications="false">
     <system.webServer>
       <aspNetCore xdt:Locator="Match(processPath)"
-                  processPath="dotnet"
+                  processPath=".\\Atlas.Api.exe"
                   xdt:Transform="SetAttributes(stdoutLogEnabled,stdoutLogFile)"
-                  stdoutLogEnabled="false"
+                  stdoutLogEnabled="true"
                   stdoutLogFile="\\?\%home%\LogFiles\stdout">
         <environmentVariables>
           <environmentVariable name="ASPNETCORE_DETAILEDERRORS"
