--- a/Atlas.Api/web.config
+++ b/Atlas.Api/web.config
@@ -7,7 +7,7 @@
       </handlers>
       <aspNetCore processPath=".\\Atlas.Api.exe"
                   arguments=""
-                  stdoutLogEnabled="false"
+                  stdoutLogEnabled="true"
                   stdoutLogFile="\\?\%home%\\LogFiles\\stdout"
                   hostingModel="inprocess">
         <environmentVariables>
