--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -119,9 +119,27 @@ jobs:
         run: dotnet run --project Atlas.DbMigrator -- --connection "$env:MIGRATOR_CONNECTION"
 
       - name: Publish
-        # Self-contained so Azure App Service does not need .NET 8 runtime installed (avoids 500.31 ANCM).
-        # win-x86 for Windows App Service.
+        # Self-contained win-x86 for 32-bit Free/Shared tier (avoids 500.31 ANCM + 500.32 load failure).
         run: dotnet publish ./Atlas.Api/Atlas.Api.csproj -c Release -o ./publish -r win-x86 --self-contained true
+
+      - name: Validate publish output
+        shell: pwsh
+        run: |
+          $dir = './publish'
+          Get-ChildItem -Path $dir -Recurse -Name | ForEach-Object { Write-Host $_ }
+          $required = @(
+            (Join-Path $dir 'Atlas.Api.dll'),
+            (Join-Path $dir 'Atlas.Api.deps.json'),
+            (Join-Path $dir 'Atlas.Api.runtimeconfig.json'),
+            (Join-Path $dir 'web.config')
+          )
+          foreach ($f in $required) {
+            if (-not (Test-Path $f)) {
+              Write-Error "Missing required publish artifact: $f"
+              exit 1
+            }
+          }
+          Write-Host "All required artifacts present."
 
       - name: Prod deployment disabled message
         if: github.event_name == 'push' && github.ref == 'refs/heads/main' && vars.DEPLOY_PROD_ON_MAIN != 'true'
@@ -204,7 +222,39 @@ jobs:
 
       - name: Deploy to Azure Web App
         if: github.event_name != 'push' || github.ref != 'refs/heads/main' || vars.DEPLOY_PROD_ON_MAIN == 'true'
+        id: deploy
         uses: azure/webapps-deploy@v3
         with:
           app-name: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'dev' && 'atlas-homes-api-dev' || 'atlas-homes-api' }}
           package: ./publish
+
+      - name: Restart Web App
+        if: github.event_name != 'push' || github.ref != 'refs/heads/main' || vars.DEPLOY_PROD_ON_MAIN == 'true'
+        shell: pwsh
+        env:
+          APP_NAME: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'dev' && 'atlas-homes-api-dev' || 'atlas-homes-api' }}
+          RESOURCE_GROUP: ${{ vars.AZURE_WEBAPP_RG }}
+        run: |
+          $rg = $env:RESOURCE_GROUP
+          if ([string]::IsNullOrWhiteSpace($rg)) { $rg = 'atlas-api-rg' }
+          az webapp restart --name $env:APP_NAME --resource-group $rg
+          Write-Host "Restarted $env:APP_NAME"
+
+      - name: Smoke test (swagger)
+        if: github.event_name != 'push' || github.ref != 'refs/heads/main' || vars.DEPLOY_PROD_ON_MAIN == 'true'
+        shell: pwsh
+        env:
+          APP_NAME: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'dev' && 'atlas-homes-api-dev' || 'atlas-homes-api' }}
+          RESOURCE_GROUP: ${{ vars.AZURE_WEBAPP_RG }}
+        run: |
+          $rg = $env:RESOURCE_GROUP
+          if ([string]::IsNullOrWhiteSpace($rg)) { $rg = 'atlas-api-rg' }
+          $hostName = az webapp show --name $env:APP_NAME --resource-group $rg --query defaultHostName -o tsv
+          $baseUrl = "https://$hostName"
+          Write-Host "Smoke testing $baseUrl/swagger/v1/swagger.json"
+          $r = Invoke-WebRequest -Uri "$baseUrl/swagger/v1/swagger.json" -UseBasicParsing -TimeoutSec 30
+          if ($r.StatusCode -ne 200) {
+            Write-Error "Smoke test failed: swagger returned $($r.StatusCode)"
+            exit 1
+          }
+          Write-Host "Swagger returned 200."
