--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -230,6 +230,7 @@ jobs:
 
       - name: Restart Web App
         if: github.event_name != 'push' || github.ref != 'refs/heads/main' || vars.DEPLOY_PROD_ON_MAIN == 'true'
+        continue-on-error: true
         shell: pwsh
         env:
           APP_NAME: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'dev' && 'atlas-homes-api-dev' || 'atlas-homes-api' }}
@@ -238,10 +239,14 @@ jobs:
           $rg = $env:RESOURCE_GROUP
           if ([string]::IsNullOrWhiteSpace($rg)) { $rg = 'atlas-api-rg' }
           az webapp restart --name $env:APP_NAME --resource-group $rg
+          if ($LASTEXITCODE -ne 0) {
+            Write-Warning 'Restart not permitted; continuing to smoke test'
+            exit 1
+          }
           Write-Host "Restarted $env:APP_NAME"
 
       - name: Smoke test (swagger)
-        if: github.event_name != 'push' || github.ref != 'refs/heads/main' || vars.DEPLOY_PROD_ON_MAIN == 'true'
+        if: always() && (github.event_name != 'push' || github.ref != 'refs/heads/main' || vars.DEPLOY_PROD_ON_MAIN == 'true')
         shell: pwsh
         env:
           APP_NAME: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'dev' && 'atlas-homes-api-dev' || 'atlas-homes-api' }}
@@ -251,10 +256,31 @@ jobs:
           if ([string]::IsNullOrWhiteSpace($rg)) { $rg = 'atlas-api-rg' }
           $hostName = az webapp show --name $env:APP_NAME --resource-group $rg --query defaultHostName -o tsv
           $baseUrl = "https://$hostName"
-          Write-Host "Smoke testing $baseUrl/swagger/v1/swagger.json"
-          $r = Invoke-WebRequest -Uri "$baseUrl/swagger/v1/swagger.json" -UseBasicParsing -TimeoutSec 30
-          if ($r.StatusCode -ne 200) {
-            Write-Error "Smoke test failed: swagger returned $($r.StatusCode)"
-            exit 1
+          $swaggerUrl = "$baseUrl/swagger/v1/swagger.json"
+          $delays = @(5, 10, 15, 20, 30, 30)
+
+          Write-Host "Smoke testing $swaggerUrl with retries"
+
+          for ($i = 0; $i -lt $delays.Count; $i++) {
+            try {
+              $r = Invoke-WebRequest -Uri $swaggerUrl -UseBasicParsing -TimeoutSec 30
+              if ($r.StatusCode -eq 200) {
+                Write-Host "Swagger returned 200 on attempt $($i + 1)."
+                exit 0
+              }
+
+              Write-Warning "Attempt $($i + 1) returned status code $($r.StatusCode)."
+            }
+            catch {
+              Write-Warning "Attempt $($i + 1) failed: $($_.Exception.Message)"
+            }
+
+            if ($i -lt ($delays.Count - 1)) {
+              $sleepSeconds = $delays[$i]
+              Write-Host "Waiting $sleepSeconds seconds before retry..."
+              Start-Sleep -Seconds $sleepSeconds
+            }
           }
-          Write-Host "Swagger returned 200."
+
+          Write-Error 'Smoke test failed: swagger did not return 200 after 6 attempts.'
+          exit 1
