--- a/Atlas.Api/appsettings.Development.example.json
+++ b/Atlas.Api/appsettings.Development.example.json
@@ -15,5 +15,14 @@
     "Razorpay": {
       "KeyId": "rzp_test_SBxu0MfXbn5G6b",
       "KeySecret": "jMqG5YeVfxUUtwmKFNcciNUu"
+    },
+    "Smtp": {
+      "Host": "smtp.gmail.com",
+      "Port": 587,
+      "Username": "atlashomeskphb@gmail.com",
+      "Password": "__SET_VIA_ENV__",
+      "FromEmail": "atlashomeskphb@gmail.com",
+      "FromName": "Atlas Homes",
+      "EnableSsl": true
     }
   }
