--- a/Atlas.Api/appsettings.json
+++ b/Atlas.Api/appsettings.json
@@ -13,7 +13,16 @@
     "Key": "__SET_VIA_ENV_OR_AZURE__"
   },
   "Razorpay": {
-    "KeyId": "__SET_VIA_ENV_OR_AZURE__",
-    "KeySecret": "__SET_VIA_ENV_OR_AZURE__"
+    "KeyId": "rzp_live_SBHYv0qukCHvUH",
+    "KeySecret": "jNHL5rcHCsOWyCcYm31GsqYc"
+  },
+  "Smtp": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "atlashomeskphb@gmail.com",
+    "Password": "__SET_VIA_ENV_OR_AZURE__",
+    "FromEmail": "atlashomeskphb@gmail.com",
+    "FromName": "Atlas Homes",
+    "EnableSsl": true
   }
 }
