--- a/Atlas.Api/appsettings.Development.local.json
+++ b/Atlas.Api/appsettings.Development.local.json
@@ -14,5 +14,14 @@
     "Razorpay": {
       "KeyId": "rzp_test_SBxu0MfXbn5G6b",
       "KeySecret": "jMqG5YeVfxUUtwmKFNcciNUu"
+    },
+    "Smtp": {
+      "Host": "smtp.gmail.com",
+      "Port": 587,
+      "Username": "atlashomeskphb@gmail.com",
+      "Password": "fvclbarlzxxzzvtq",
+      "FromEmail": "atlashomeskphb@gmail.com",
+      "FromName": "Atlas Homes",
+      "EnableSsl": true
     }
   }
