--- a/Atlas.Api/appsettings.Development.local.json
+++ b/Atlas.Api/appsettings.Development.local.json
@@ -12,15 +12,15 @@
       "Key": "__SET_VIA_ENV__"
     },
     "Razorpay": {
-      "KeyId": "rzp_test_SBxu0MfXbn5G6b",
-      "KeySecret": "jMqG5YeVfxUUtwmKFNcciNUu"
+      "KeyId": "__SET_VIA_ENV_OR_AZURE__",
+      "KeySecret": "__SET_VIA_ENV_OR_AZURE__"
     },
     "Smtp": {
       "Host": "smtp.gmail.com",
       "Port": 587,
-      "Username": "atlashomeskphb@gmail.com",
-      "Password": "fvclbarlzxxzzvtq",
-      "FromEmail": "atlashomeskphb@gmail.com",
+      "Username": "__SET_VIA_ENV_OR_AZURE__",
+      "Password": "__SET_VIA_ENV_OR_AZURE__",
+      "FromEmail": "__SET_VIA_ENV_OR_AZURE__",
       "FromName": "Atlas Homes",
       "EnableSsl": true
     }
