--- a/Atlas.Api/appsettings.json
+++ b/Atlas.Api/appsettings.json
@@ -13,8 +13,8 @@
     "Key": "__SET_VIA_ENV_OR_AZURE__"
   },
   "Razorpay": {
-    "KeyId": "rzp_live_SBHYv0qukCHvUH",
-    "KeySecret": "jNHL5rcHCsOWyCcYm31GsqYc"
+    "KeyId": "__SET_VIA_ENV_OR_AZURE__",
+    "KeySecret": "__SET_VIA_ENV_OR_AZURE__"
   },
   "Smtp": {
     "Host": "smtp.gmail.com",
