Add tenant-scoped quoted pricing and configurable pricing settings

--- a/Atlas.Api/appsettings.json
+++ b/Atlas.Api/appsettings.json
@@ -24,5 +24,8 @@
     "FromEmail": "atlashomeskphb@gmail.com",
     "FromName": "Atlas Homes",
     "EnableSsl": true
+  },
+  "Quotes": {
+    "SigningKey": "dev-quote-signing-key-change-me"
   }
 }
